# strangeClaw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  LICENSE  README.md  config.example.yaml  config.py  coordinator.py  host_secrets.py  main.py  pyproject.toml  secrets.example.yaml  session.py
adapters/: __init__.py  cli.py  session_persistence.py  telegram.py
agent/: __init__.py  agent.py  broker_client.py  http_auth.py  llm.py  llm_proxy.py  llm_types.py  protocol.py  request_broker_client.py  skills.py  subagents.py  tools.py  transport.py
broker/: __init__.py  credentials.py  redaction.py  request_broker.py
docs/: architecture.md  configuration.md  fire-mode.md  setup.md
sandbox/: __init__.py  broker.py  fire.py  fire_check.py  host_services.py  llm_service.py  yolo.py
scripts/: build-fire-kernel.sh  build-fire-rootfs.sh  check-b13-runtime.sh  check-b21-vsock.sh  cleanup-fire.sh  fetch-fire-assets.sh  fire-check.sh  local_test_broker.py  setup-fire.sh  test-llm-client.py  verify_b23.py  verify_b24.py  verify_fire.py
tests/: __init__.py  test_agent.py  test_broker.py  test_broker_credentials.py  test_broker_redaction.py  test_broker_request_broker.py  test_builtin_skills.py  test_cleanup_fire_script.py  test_cli_adapter.py  test_config.py  test_coordinator.py  test_fire.py  test_fire_check.py  test_host_secrets.py  test_host_services.py  test_integration_subagents.py  test_integration_yolo.py  test_llm.py  test_llm_proxy.py  test_llm_service.py  test_main.py  test_protocol.py  test_script_test_llm_client.py  test_security.py  (+9 more)
(+15 files in other folders)
