[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strangeclaw"
version = "0.1.0a0"
description = "Minimal self-hosted autonomous AI agent with pluggable sandboxing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "litellm>=1.57.0",
  "jsonschema>=4.21.0",
  "PyYAML>=6.0.1",
  "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20240311",
  "pre-commit>=3.7.0",
]

[tool.setuptools]
py-modules = ["main", "config", "session"]
packages = ["agent", "adapters", "sandbox"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["main.py", "config.py", "session.py", "agent", "adapters", "sandbox", "tests"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
